<resources>
    <string name="app_name">Platform</string>

    <!--Options item menu-->
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>

    <!--Edit event dialog fragment-->
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="text_title_hint">Title</string>
    <string name="owner_icon_description">Owner</string>
    <string name="text_owner">Set Owner</string>
    <string name="text_all_day">All day</string>
    <string name="text_start">Start</string>
    <string name="text_start_date">Wed, Oct 24</string>
    <string name="text_start_time">12:00 PM</string>
    <string name="text_end">End</string>
    <string name="text_end_date">Wed, Oct 24</string>
    <string name="text_end_time">1:00 PM</string>
    <string name="repeat_icon_description">Repeat</string>
    <string name="text_repeat">Does not repeat</string>
    <string name="reminder_icon_description">Reminder</string>
    <string name="text_reminder">Set Reminder</string>
    <string name="client_icon_description">Client</string>
    <string name="text_client">Add Client</string>
    <string name="location_icon_description">Location</string>
    <string name="text_location_hint">Add Location</string>
    <string name="status_icon_description">Status</string>
    <string name="text_status">Set Status</string>
    <string name="amount_icon_description">Amount</string>
    <string name="text_amount">Add Amount</string>
    <string name="note_icon_description">Notes</string>
    <string name="text_note">Add Note</string>
    <string name="button_delete">Delete Event</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Metropolitan Maids</string>
    <string name="nav_header_subtitle">www.dubaimetromaids.com</string>
    <string name="nav_header_description">Navigation header</string>
    <string name="nav_item_schedule">Schedule</string>
    <string name="nav_item_clients">Clients</string>
    <string name="nav_item_owners">Owners</string>
    <string name="nav_item_other">Other</string>
    <string name="nav_item_share">Share</string>
    <string name="nav_item_settings">Settings</string>

    <!--Owner recyclerview item-->
    <string name="owner_image">Owner Image</string>
    <string name="owner_name">Owner Name</string>

    <!--Client recyclerview item-->
    <string name="client_name">Client Name</string>
    <string name="client_number">Client Number</string>
    <string name="client_number_email_format">%1$s\n%2$s</string>
    <string name="client_number_email_mock">+971552928421\niwantotobreakfree@hotmail.com</string>
    <string name="client_location">Client Location</string>
    <string name="client_location_mock">Avenue Residence 3, Apt. 105, Al Furjan, Dubai</string>
    <string name="client_balance">Client Balance</string>
    <string name="client_balance_mock">150.0</string>

    <!--Edit client dialog fragment-->
    <string name="edit_client_name_hint">Name</string>
    <string name="edit_client_phone_number_hint">Phone Number</string>
    <string name="edit_client_email_hint">Email</string>
    <string name="edit_client_location_hint">Location</string>
    <string name="edit_client_balance_hint">Balance</string>
    <string name="edit_client_note_hint">Note</string>
    <string name="edit_client_delete_button">Delete Client</string>
</resources>